Fix content not covering full width problem

--- a/src/style/dashboard.less
+++ b/src/style/dashboard.less
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   position: relative;
+  overflow: hidden;
 
   .background{
     position: absolute;
@@ -40,6 +41,8 @@
 .wrapper {
   padding: 8em 0em 8em;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 
   h2 {
     font-size: 32px;
@@ -72,9 +75,7 @@
     background-color: rgba(0, 0, 0, 0);
     background-image: url("http://res.cloudinary.com/dd1ixvdxn/image/upload/v1517993642/bg-blur_i8i7ua.jpg");
     background-attachment: scroll;
-    min-width: 1440px;
     left: 0px;
-    width: 1440px;
     background-position: 50% -34px;
 
     h2,
@@ -108,7 +109,24 @@
     }
   }
 
+  &.team {
+
+    h4{
+      margin-top: 20px;
+    }
+
+    p {
+      font-size: 17px;
+      line-height: 28px;
+    }
+  }
+
   &.advisor {
+
+    h4{
+      margin-top: 20px;
+    }
+
     p {
       font-size: 17px;
       line-height: 28px;
@@ -171,10 +189,11 @@
   }
 
   &.map {
-    height: 600px;
+    height: 400px;
     padding: 0px;
     background-image: url("http://res.cloudinary.com/dd1ixvdxn/image/upload/v1518006879/map_pldai5.png");
     background-size: cover;
+    background-position: center;
   }
 }
 
